@@ -23,12 +23,15 @@ my %WriteMakefileArgs = (
     "B" => 0,
     "Carp" => 0,
     "Clone" => 0,
+    "Clone::Choose" => 0,
+    "Clone::PP" => 0,
     "Devel::StackTrace" => 0,
     "Eval::Closure" => 0,
     "Exporter" => 0,
     "IO::File" => 0,
     "List::Util" => "1.33",
     "MRO::Compat" => 0,
+    "Module::Implementation" => 0,
     "Module::Runtime" => 0,
     "Role::Tiny" => "1.003003",
     "Role::Tiny::With" => 0,
@@ -64,6 +67,8 @@ my %FallbackPrereqs = (
   "B" => 0,
   "Carp" => 0,
   "Clone" => 0,
+  "Clone::Choose" => 0,
+  "Clone::PP" => 0,
   "Devel::StackTrace" => 0,
   "Eval::Closure" => 0,
   "Exporter" => 0,
@@ -73,6 +78,7 @@ my %FallbackPrereqs = (
   "IO::File" => 0,
   "List::Util" => "1.33",
   "MRO::Compat" => 0,
+  "Module::Implementation" => 0,
   "Module::Runtime" => 0,
   "Role::Tiny" => "1.003003",
   "Role::Tiny::With" => 0,
