@@ -4,7 +4,7 @@ Specio - Type constraints and coercions for Perl
 
 # VERSION
 
-version 0.50
+version 0.51
 
 # SYNOPSIS
 
@@ -389,6 +389,12 @@ distribution better in some way.
 
     If one of these is installed then stack traces that end up in Specio code will
     have much better subroutine names for any frames.
+
+# FORCING PURE PERL MODE
+
+For some use cases (notably fat-packing a program), you may want to force
+Specio to use pure Perl code instead of XS code. This can be done by setting
+the environment variable `SPECIO_IMPLEMENTATION` to `PP`.
 
 # WHY THE NAME?
 
