@@ -4,12 +4,15 @@
 requires "B" => "0";
 requires "Carp" => "0";
 requires "Clone" => "0";
+requires "Clone::Choose" => "0";
+requires "Clone::PP" => "0";
 requires "Devel::StackTrace" => "0";
 requires "Eval::Closure" => "0";
 requires "Exporter" => "0";
 requires "IO::File" => "0";
 requires "List::Util" => "1.33";
 requires "MRO::Compat" => "0";
+requires "Module::Implementation" => "0";
 requires "Module::Runtime" => "0";
 requires "Role::Tiny" => "1.003003";
 requires "Role::Tiny::With" => "0";
@@ -71,6 +74,7 @@ on 'develop' => sub {
   requires "Test::EOL" => "0";
   requires "Test::Mojibake" => "0";
   requires "Test::More" => "0.88";
+  requires "Test::Needs" => "0";
   requires "Test::NoTabs" => "0";
   requires "Test::Pod" => "1.41";
   requires "Test::Pod::Coverage" => "1.08";
@@ -78,5 +82,8 @@ on 'develop' => sub {
   requires "Test::Spelling" => "0.17";
   requires "Test::Version" => "2.05";
   requires "Test::Without::Module" => "0";
+  requires "lib" => "0";
   requires "namespace::autoclean" => "0";
+  requires "open" => "0";
+  requires "utf8" => "0";
 };
