@@ -13,6 +13,8 @@ prereqs_skip = Mouse
 prereqs_skip = namespace::autoclean
 prereqs_skip = Sub::Name
 prereqs_skip = XString
+pod_coverage_skip = Specio::PP
+pod_coverage_skip = Specio::XS
 stopwords_file = .stopwords
 use_github_issues = 1
 Test::TidyAll.minimum_perl = 5.010000
@@ -38,3 +40,7 @@ Sub::Quote = 0
 
 [MetaNoIndex]
 directory = t/lib
+
+[PurePerlTests]
+:version = 0.06
+env_var = SPECIO_TEST_PP
